test/ite2.slq

def main(){
	a:=H(0:ğ”¹); // error
	b:=1:ğ”¹;
	c:=H(0:ğ”¹);
	x:=if c then a else b;
	return (c,x,a,b); // error
}
